--- a/partials/custom/navigation.hbs
+++ b/partials/custom/navigation.hbs
@@ -24,7 +24,6 @@ Ghostium uses Font Awesome you can find all icons available on the url below
   http://fortawesome.github.io/Font-Awesome/cheatsheet/
 
 }}
-
 <li class="drawer-list-item">
   <a href="/" data-pjax>
     <i class="fa fa-home"></i>Home
@@ -37,15 +36,35 @@ Ghostium uses Font Awesome you can find all icons available on the url below
 </li>
 <li class="drawer-list-divider"></li>
 <li class="drawer-list-item drawer-list-title">
+  About
+</li>
+<li class="drawer-list-item">
+  <a href="http://roelwillems.com/about/" target="_blank">
+    <i class="fa fa-male"></i>Me
+  </a>
+</li>
+<li class="drawer-list-divider"></li>
+<li class="drawer-list-item drawer-list-title">
   Follow me
 </li>
 <li class="drawer-list-item">
-  <a href="http://twitter.com" target="_blank">
+  <a href="https://linkedin.com/in/roelwillems" target="_blank">
+    <i class="fa fa-linkedin"></i>Linkedin
+  </a>
+</li>
+<li class="drawer-list-item">
+  <a href="https://twitter.com/roelwillems" target="_blank">
     <i class="fa fa-twitter"></i>Twitter
   </a>
 </li>
 <li class="drawer-list-item">
-  <a href="http://github.com" target="_blank">
+  <a href="https://google.com/+Roelwillems" target="_blank">
+    <i class="fa fa-google-plus"></i>Google+
+  </a>
+</li>
+<li class="drawer-list-item">
+  <a href="https://github.com/roelwillems" target="_blank">
     <i class="fa fa-github"></i>Github
   </a>
 </li>
+
